# ec2_file_upload

./: Cargo.toml
src/: main.rs
