[package]
name = "ec2_file_upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = "0.17.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
#rusoto_core = "0.48.0"
#rusoto_dynamodb = "0.48.0"
aws-sdk-dynamodb = "0.24.0"
aws-config = "0.54.1"
openssl = { version = "=0.10.45", features = ["vendored"] }